--- a/public/Views/home.html
+++ b/public/Views/home.html
@@ -31,5 +31,11 @@
 </form>
 
 
+<form method="get" action="/login">
+    <input class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded m-2"
+           type="submit" name="login" value="Login">
+</form>
+
+
 </body>
 </html>
