--- a/public/Views/user.html
+++ b/public/Views/user.html
@@ -13,7 +13,7 @@
 <h1 class="text-4xl font-bold text-green-900 --tw-text-opacity: 1; m-3">
     Hello, {{ name }} ! </h1>
 
-<form method="post" action="/auth">
+<form method="post" action="/auth/{{ id }}">
     <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded m-2"
             type="submit">LogOut
     </button>
