--- a/public/Views/search.html
+++ b/public/Views/search.html
@@ -104,13 +104,13 @@
         <td>
             <form method="post" action="/delete">
                 <button class="bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4 rounded m-2"
-                        type="submit" name="{{ button }}" value="{{ person.personalId }}"> delete
+                        type="submit" name="{{ button }}" value="{{ person.ID }}"> delete
                 </button>
             </form>
 
             <form method="get" action="/edit">
                 <button class="bg-green-400 hover:bg-green-600 text-white font-bold py-2 px-4 rounded m-2"
-                        type="submit" name="{{ button }}" value="{{ person.personalId }}">edit
+                        type="submit" name="{{ button }}" value="{{ person.ID }}">edit
                 </button>
             </form>
         </td>
